--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Hanken Grotesk";
+  font-family: "Hanken Grotesk", sans-serrif;
 }
 
 .container {
